# se-tutorial

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  python-package.yml
docs/: search.js  vicsek_pkg_example.html
docs/vicsek_pkg_example/: test2.html
src/vicsek_pkg_example/: __init__.py  class_example.py  example.py  test.py  test2.py
src/vicsek_pkg_example.egg-info/: PKG-INFO  SOURCES.txt
test/: test_python.py
