[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [
	{ name = "Johann Thurn", email = "johann.thurn@dlr.de" }
]
requires-python = ">=3.12"
name = "vicsek_pkg_example"
version = "0.1.0"
description = "This is an example project containing a vicsek model."
dependencies = [
	"numpy",
	"matplotlib",
	"click",
	"pytest",
	"pdoc"
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
vicsek_pkg_example = { path = ".", editable = true }

[tool.pixi.tasks]
start = "python src/vicsek_pkg_example/test2.py"